--- a/thesis.tex
+++ b/thesis.tex
@@ -72,6 +72,7 @@ TODO in Deutsch...
  \acro{QA}{Question Answering}
  \acro{RNN}{Recurrent Neural Network}
  \acro{RTE}{Recognizing Textual Entailment}
+ \acro{SD}{Standard Deviation}
  \acro{SICK}{Sentences Involving Compositional Knowledge}
  \acro{SNLI}{The Stanford Natural Language Inference Corpus}
  \acro{WSD}{Word Sense Disambiguation}
