--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -566,7 +566,22 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
 	month = {Apr},
 	isbn = {978-162705298-6},
 	publisher = {Morgan {\&} Claypool Publishers}
+},
+@book{Bishop2007,
+	author = {Bishop, Christopher M.},
+	title = {{Pattern Recognition and Machine Learning (Information Science and Statistics)}},
+	year = {2007},
+	isbn = {978-038731073-2},
+	publisher = {Springer}
+},
+@article{dagan2000contextual,
+  title={Contextual word similarity},
+  author={Dagan, Ido},
+  journal={Handbook of Natural Language Processing},
+  pages={459--475},
+  year={2000}
 }
+
 
 
 
