--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -6,6 +6,16 @@
   year={2006},
   publisher={Springer}
 },
+@article{dagan2009recognizing,
+  title={Recognizing textual entailment: Rational, evaluation and approaches},
+  author={Dagan, Ido and Dolan, Bill and Magnini, Bernardo and Roth, Dan},
+  journal={Natural Language Engineering},
+  volume={15},
+  number={4},
+  pages={i--xvii},
+  year={2009},
+  publisher={Cambridge University Press}
+},
 @inproceedings{maccartney2008phrase,
   title={A phrase-based alignment model for natural language inference},
   author={MacCartney, Bill and Galley, Michel and Manning, Christopher D},
@@ -580,7 +590,26 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   journal={Handbook of Natural Language Processing},
   pages={459--475},
   year={2000}
+},
+@article{marcus1993building,
+  title={Building a large annotated corpus of English: The Penn Treebank},
+  author={Marcus, Mitchell P and Marcinkiewicz, Mary Ann and Santorini, Beatrice},
+  journal={Computational linguistics},
+  volume={19},
+  number={2},
+  pages={313--330},
+  year={1993},
+  publisher={MIT Press}
+},
+@inproceedings{mikolov2013linguistic,
+  title={Linguistic regularities in continuous space word representations},
+  author={Mikolov, Tomas and Yih, Wen-tau and Zweig, Geoffrey},
+  booktitle={Proceedings of the 2013 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  pages={746--751},
+  year={2013}
 }
+
+
 
 
 
