--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,9 @@
 
 \newcommand{\mx}[1]{\textcolor{red}{max: #1}}
 
+\newcommand{\specialcell}[2][c]{%
+  \begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
+
 \begin{document}
   \thesistitle{Understanding and Improving Neural Models for Natural Language Interference}%
     {Verständnis und Verbesserung Neuronaler Modelle für Natural languge inference}
