--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -227,6 +227,14 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   year={2005},
   organization={Association for Computational Linguistics}
 },
+@InProceedings{glockner_acl18,
+  author    = {Glockner, Max and Shwartz, Vered and Goldberg, Yoav},
+  title     = {Breaking NLI Systems with Sentences that Require Simple Lexical Inferences},
+  booktitle = {The 56th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  month     = {July},
+  year      = {2018},
+  address   = {Melbourne, Australia}
+},
 @article{bengio2013representation,
   title={Representation learning: A review and new perspectives},
   author={Bengio, Yoshua and Courville, Aaron and Vincent, Pascal},
@@ -607,7 +615,78 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   booktitle={Proceedings of the 2013 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
   pages={746--751},
   year={2013}
+},
+@inproceedings{shwartz2015learning,
+  title={Learning to exploit structured resources for lexical inference},
+  author={Shwartz, Vered and Levy, Omer and Dagan, Ido and Goldberger, Jacob},
+  booktitle={Proceedings of the Nineteenth Conference on Computational Natural Language Learning},
+  pages={175--184},
+  year={2015}
+},
+@article{sahlgren2008distributional,
+  title={The distributional hypothesis},
+  author={Sahlgren, Magnus},
+  journal={Italian Journal of Disability Studies},
+  volume={20},
+  pages={33--53},
+  year={2008}
+},
+@inproceedings{pantel2005inducing,
+  title={Inducing ontological co-occurrence vectors},
+  author={Pantel, Patrick},
+  booktitle={Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics},
+  pages={125--132},
+  year={2005},
+  organization={Association for Computational Linguistics}
+},
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+},
+@InProceedings{jia-liang:2017:EMNLP2017,
+  author    = {Jia, Robin  and  Liang, Percy},
+  title     = {Adversarial Examples for Evaluating Reading Comprehension Systems},
+  booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+  month     = {September},
+  year      = {2017},
+  address   = {Copenhagen, Denmark},
+  publisher = {Association for Computational Linguistics},
+  pages     = {2021--2031},
+  url       = {https://www.aclweb.org/anthology/D17-1215}
+},
+@article{dasgupta2018evaluating,
+  title={Evaluating Compositionality in Sentence Embeddings},
+  author={Dasgupta, Ishita and Guo, Demi and Stuhlm{\"u}ller, Andreas and Gershman, Samuel J and Goodman, Noah D},
+  journal={arXiv preprint arXiv:1802.04302},
+  year={2018}
+},
+@inproceedings{kruszewski2015so,
+  title={So similar and yet incompatible: Toward the automated identification of semantically compatible words},
+  author={Kruszewski, Germ{\'a}n and Baroni, Marco},
+  booktitle={Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  pages={964--969},
+  year={2015}
+},
+@article{landis1977measurement,
+  title={The measurement of observer agreement for categorical data},
+  author={Landis, J Richard and Koch, Gary G},
+  journal={biometrics},
+  pages={159--174},
+  year={1977},
+  publisher={JSTOR}
 }
+
+
+
+
+
+
 
 
 
