--- a/tex/approaches_ext_res.tex
+++ b/tex/approaches_ext_res.tex
@@ -18,3 +18,6 @@
 \paragraph{Focusing on original words within sentence representation}
 \subsubsection{Analysis}
 \subsubsection{Evaluation}
+
+cite: An Overview of Multi-Task Learning
+in Deep Neural Networks
