--- a/tex/basics.tex
+++ b/tex/basics.tex
@@ -14,6 +14,7 @@ the model is required to correctly align \textit{Donald Trump} with \textit{The 
 While \ac{NLI} clearly is central to reasoning capabilities, it is very fundamental and applicable to a large variety of \ac{NLP} as the ability to recognize textual entailment is a fundamental and necessary problem towards real \ac{NLU} \citep{maccartney2007natural,bos2005recognising}. Many \ac{NLP} applications such as \ac{QA}, Summarization \ac{IE} implicitly depend on this ability, as the huge variability of possible expressions for the same meaning it is a core phenomen of natural language \citep{dagan2009recognizing}. All three tasks require the model to infer that the target meaning of interest can be inferred from any other variant of textual expression. For \ac{QA} it is the identification of a correct answer, for summarization, the complete summary needs to be implied by the original text and similarily, while redundant sentences expressing the same meaning should be ommited. Similarily \ac{IE}, especially if using multiple documents, needs to infer, whether two variants of text contain the same information. Even simple paraphrasing can be broken down to a lexical inference problem with mutual entailment between $p$ and $h$. As end applications for \ac{NLP} in addition to \ac{NLU} need to solve another complicated machine-learning task it is hard to compare and directly improve their \ac{NLU} capabilities. Thus, one of the main purposes of \ac{NLI}, being a very basic problem towards \ac{NLU}, serves a a benchmark  with any improvements helping a large variety of high level tasks \citep{williams2017broad,cooper1996using,bos2005recognising,dagan2006pascal}. 
 
 \subsection{Lexical Semantic Relations}\label{sec:word_relations}
+\mx{TODO: lexical inference \citep{shwartz2015learning} and being the semantic relation between two terms (bi/unidirectional)}
 Lexical relations describe the relationship between words\footnote{While there is no single definition for \textit{word}, we refer assume a single word to have the same surface form and the same lemma.} whereas \textit{Lexical Semantic Relations} specifically indicate relations referring to the meaning of the word. \citep{murphy2003semantic} and have shown to be helpful for detecting lexical inferences \citep{dagan2009recognizing}. We define the following relations based on those of \cite{Jurafsky2008May}. One key characteristic of natural language is ambiguity, tht is also present in lexical semantics as words may have several meanings or \textit{senses}\footnote{The phenomen of words having multiple senses is called \textit{homonymy}, if both senses show indicate no relation but share the surface form like ``bank'' (financial institution) and ``bank'' (sloping mound). If those senses are semantically related like ``milk'' (take milk from female mammals) and ``milk'' (like cow's milk), the relationship is called \textit{polysemy} \citep{Jurafsky2008May}}. To deal with this phenomene, lexical semantic relations are defined between senses rather than words. For the sake of simplicity for the most part we follow a naive approach in the following chapters of assuming the most dominant sense of a word, when referring to it. Specifically we define \textit{Synonymy}, \textit{Antonomy}, \textit{Hypernomy} and \textit{Holonomy}, the latter two relations are visualized\footnote{This is for illustration purposes only and we only added some relevant relations between the entities, more relation are possible. For instance, the holonym relationship would of course hold between \textit{head} and any other \textit{animal}.} in Figure \ref{fig:lexical_resources}.
 \begin{figure}[tph!]
 \centering
