--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -3,7 +3,7 @@ Much work has been done to create strong models for \ac{NLI} and we show some su
 \subsection{External Resources}\label{sec:ext_resources}
 A large variety of knowledge bases exist, containing for instance lexical relations or commonly known world knowledge, which can be helpfful for improving of \ac{NLI}. Research has shown that both, manually created and automatically created resources, can successfully be applied in many tasks of \ac{NLP}. Inn this section we only show WordNet and Wikipedia, containing different information that we consider to be useful for \ac{NLI} and \ac{NLU}, as well as two resources combining multiple resources and thus providing a huge amount of readily-available knowledge.
 
-\subsubsection{WordNet}
+\subsubsection{WordNet}\label{sec:wordnet}
 \begin{wrapfigure}[13]{R}{0.5\textwidth}
 \centering
 	\includegraphics[totalheight=3.5cm]{fig/wordnet_example.png}
@@ -17,7 +17,7 @@ Mainly focusing on nouns\footnote{WordNet 3.0 contains 117,798 nouns, 11,529 ver
 \paragraph*{Usage and Issues}
 When using WordNet in applications one has to identify the correct sense out of many possible synsets for a given lemma. This may be done using proper algorithms for \ac{WSD}. Another simple and frequently used heuristic is to always choose the first snyset, which typically reflects the most common sense \citep{mccarthy2004using}. As shown in Figure \ref{fig:wordnet}, word-senses are defined with different granularities, sometimes varying only with subtle differences that are not required by most applications. Subsequently this reduces the interpretability of path lengths of lexical relations between two synsets. For instance, identifying that ``sunflower'' is a hyponym of ``plant'' requires the traversal over five edges (\textit{sunflower $\rightarrow$ flower $\rightarrow$ angiosperm $\rightarrow$ spermatophyte $\rightarrow$ vascular plant $\rightarrow$ plant}). At the same time, identifying that a ``curch'' is a ``building'' can be identified by only traversing over two edges (\textit{church $\rightarrow$ place of worship $\rightarrow$ building}) and traversing similarily over five edges leads to the synset ``whole, unit'', covering both, living things and objects. This is a known issue \citep{resnik1995using} and  strategies exist to reduce the complexity of WordNet using sense clustering\citep{prakash2007learning}.
 
-\subsubsection{Wikipedia}
+\subsubsection{Wikipedia}\label{sec:wikipedia}
 While WordNet contains manually annotated lexical relations and is easily automatically accessable, Wikipedia\footnote{\href{https://www.wikipedia.org/}{https://www.wikipedia.org/}} is a huge multi-lingual, continuously growing  encyclopedy, maintained by many volunteers. Also mostly focusing on nouns, due to the nature of containing ecyclopedic information, it contains a large variety of factual information about named entities, that many other lexical resources lack \citep{gurevych2016linked}. While not being made for the purpose of being a lexical knowledge base, it may be seen as partially annotated due to artifacts like hyperlinks, thus can be interpreted similarily and even accessed using available tools in a programmatic manner \citep{zesch2008extracting}.  \cite{gurevych2016linked} describe the following information types that can be exploited to retrieve lexical information:
 \begin{itemize}
 \item The first paragraph of an article can be interpreted as the \textit{sense definition}, since every article covers only one aspect by design.
@@ -171,7 +171,7 @@ Sentence-encoding models follow the Siamese Architecture \citep{bromley1994signa
 \paragraph*{Inner-Attention-based Models}
 Following the intuition that humans onyl remember certain parts of a sentence after reading it, \cite{chen2017recurrent} modeled this behavious using gated intra-sentence attention, by generating the sentence representation using pooling\footnote{As done with max-pooling by \cite{nie2017shortcut}.} strategies over the ouptouts of the encoding \ac{biLSTM}, reweighted using the attention gates. The idea of using inner-attention mechanisms is also used by the best performing sentence encoders for \ac{SNLI}, at the time of this writing reaching 86.3\% accuracy \citep{shen2018reinforced,im2017distance}. \cite{shen2018reinforced} create sentence representations using the combination of hard and soft self-attention\footnote{A plain attention function calculates the alignment for an input sequence $x=[x_1, x_2, ...,x_n]$ given a query $q$. In the special case of self-attention, $q$ arises from the input sequence $x$ itself \citep{shen2018reinforced}.}. While hard-attention forces the model to only focus on relevant elements of the input sequence, disregarding all others, it is not fully differentialbly and thus inefficient to train. Soft-attention methods on the other hand are fully differentiable and weights each element of the input sequence accoridng to their relevance. However by also giving positive, non-zero weights to irrelevant elements it diminishes the emphasis on truely important ones. By first applying hard-attention to retrieve a subset of context-aware elements that is afterwards processed using soft-attention, \cite{shen2018reinforced} leverage the mentioned advantages both techniques. Inner attention is also used by \cite{im2017distance}, however their model additionally uses directional masks, that prevent the network from considering following or predeeding words in the attiontion proces respectively and distance masks that reduce the attention weight if words are further away to each other. They show that their model outperforms others, especially with longer input sentences, as the result of considering word distance and positional information.
 
-\subsubsection{Inter-Sentence-Attention-based Models}
+\subsubsection{Inter-Sentence-Attention-based Models}\label{sec:rel_work_sentence_encoding_models}
 \cite{rocktaschel2015reasoning} showed that models perform significantly better when looking at both sentences simultaneously. This is motivated by the way humans would solve the task of \ac{NLI} by first reading the premise and creating the understanding of the hypothesis based on the previously read sentence. Since this seems to be superior in the \ac{SNLI}, many works followed this approach reaching state-of-the-art results. Also in this class of methods memory networks, accessable via attention were applied \citep{cheng2016long}.
 
 \paragraph*{Inter-Sentence-Attention-based models used within this work}
@@ -185,7 +185,7 @@ To this date the best single sentence-encoding models on \ac{SNLI} reach 88.6\% 
 
 \subsection{Integration of external Resources into Neural Networks}\label{sec:ext_res_in_nn}
 There have been several approaches to integrate knowledge of different kind (as described in Section §\ref{sec:basics_datasets}) into neural networks. \cite{hu2016deep} infer external knowledge represented in logical form using a student-teacher setup, with the teacher being a neural network constrained by the rules acquired from an external resource, the student being a neural networkconsidering the true labels and the constrained predictions of the teacher. By simultaneous training both networks influenced by each others predictions, the integrated within the networks, weighted by their learned relevance. Most attempts however target improving word representations.
-\subsubsection{Improving word-embeddings}
+\subsubsection{Improving word-embeddings}\label{sec:embeddings_improvements_relwork}
 A very intuitive way to integrate external resources is to enrich word-embeddings with additional information. As most neural models depend on those anyway, any imrovement of word-representations can be adapted with very limited effort.
 
 \paragraph*{Joint learning of distributional embeddings with external information}
