--- a/thesis.tex
+++ b/thesis.tex
@@ -35,8 +35,11 @@
 \newcommand{\specialcell}[2][c]{%
   \begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
 
+\newcommand{\specialcellc}[2][c]{%
+  \begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
+
 \begin{document}
-  \thesistitle{Understanding and Improving Neural Models for Natural Language Interference}%
+  \thesistitle{Understanding and Improving Neural Models for Natural Language Interference using External Resources}%
     {Verständnis und Verbesserung Neuronaler Modelle für Natural languge inference}
   \author{Max Glockner}
   \referee{Prof. Dr. Iryna Gurevych}{Dr. Yoav Goldberg}[Dr. Andreas R\"ucké]
@@ -61,6 +64,7 @@ TODO in Deutsch...
  \acro{biLSTM}{bidirectional Long-Short-Term Memory Network}
  \acro{BoW}{Bag of Words}
  \acro{ESIM}{Enhanced Sequential Inference Model}
+ \acro{HIT}{Human Intelligence Task}
  \acro{IE}{Information Extraction}
  \acro{IR}{Information Retrieval}
  \acro{KIM}{Knowledge-based Inference Model}
